<resources>
    <string name="app_name">Geek</string>
    <string name="daily">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="vtex">V2EX</string>
    <string name="like">收藏</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dailyNews">日报</string>
    <string name="sections">专栏</string>
    <string name="hot">热门</string>
</resources>
